logs/dryrun_20260514.log
[11:00:05] DuckDB ready — spot=23625.1, ATM=23650, VIX=18.64
[11:00:05] Window: 11:00-12:00 | Trades: 5 | Wing width: 200
[11:00:05] Entry times: ['11:03', '11:09', '11:11', '11:24', '11:39']
[11:00:05] Exit times:  ['11:08', '11:14', '11:17', '11:31', '11:48']
[11:00:05] \nWaiting for 11:00...
[11:00:05] === DRY-RUN SESSION STARTED ===
[11:03:00] 
[11:03] Trade 1/5 — ENTRY
Traceback (most recent call last):
  File "/home/trading_ceo/brahmand/autonomous_dryrun.py", line 587, in <module>
    main()
  File "/home/trading_ceo/brahmand/autonomous_dryrun.py", line 420, in main
    from e2e_chain import run_full_chain
  File "/home/trading_ceo/brahmand/e2e_chain.py", line 283
    finally:
    ^^^^^^^
SyntaxError: invalid syntax
